Cleans up initials code

--- a/packages/components/src/Avatar/Avatar.css
+++ b/packages/components/src/Avatar/Avatar.css
@@ -28,6 +28,10 @@
   text-transform: uppercase;
 }
 
+.smallInitials {
+  font-size: 0.4375em;
+}
+
 .border {
   width: calc(var(--avatar-size) - (var(--avatar-border-size) * 2));
   height: calc(var(--avatar-size) - (var(--avatar-border-size) * 2));
