--- a/packages/components/src/Avatar/Avatar.css
+++ b/packages/components/src/Avatar/Avatar.css
@@ -1,6 +1,7 @@
 :root {
   --avatar-size: 2rem;
   --avatar-border-size: 2px;
+  --avatar-svg-size: 50%;
 }
 
 .avatar {
@@ -10,16 +11,26 @@
   width: var(--avatar-size);
   height: var(--avatar-size);
   border-radius: 50%;
-  color: var(--color-white);
+  color: var(--color-blue--dark);
   font-size: var(--avatar-size);
   -webkit-font-smoothing: antialiased;
   background: no-repeat center center var(--color-greyBlue);
   background-size: cover;
 }
 
+.avatar svg {
+  width: var(--avatar-svg-size);
+  height: var(--avatar-svg-size);
+}
+
 .large {
   --avatar-size: 4.5rem;
   --avatar-border-size: 4px;
+  --avatar-svg-size: 40%;
+}
+
+.isDark {
+  color: var(--color-white);
 }
 
 .initials {
