--- a/packages/components/src/Page/Page.css
+++ b/packages/components/src/Page/Page.css
@@ -22,5 +22,6 @@
 }
 
 .actionGroup > :not(:last-child) {
-  margin: 0 var(--space-small) 0 0;
+  margin: 0;
+  margin-right: var(--space-small);
 }
