feat(components): add action buttons to Page component  (#248)
* export PageProps

* export SectionProps for use externally

* add props to display buttons and menu

* give moreActionsMenu a default type

* improve CSS in title

* add tests for new button props

* make secondary action a secondary button

--- a/packages/components/src/Page/Page.css
+++ b/packages/components/src/Page/Page.css
@@ -15,3 +15,13 @@
 .narrow {
   max-width: calc(var(--base-unit) * 64);
 }
+
+.titleBar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.actionGroup > :not(:last-child) {
+  margin: 0;
+  margin-right: var(--space-small);
+}
