--- a/packages/components/src/LightBox/LightBox.css
+++ b/packages/components/src/LightBox/LightBox.css
@@ -1,3 +1,20 @@
 .wrapper:global(.ril__outer) {
-  background-color: rgba(251, 92, 211, 0.5);
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  background-color: transparent;
+}
+.wrapper:global(.ril__outer:before) {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-greyBlue);
+  opacity: 0.8;
+}
+
+.wrapper:global(.ril__outer .ril__captionContent) {
+  color: rgb(193, 201, 206);
+}
+
+.wrapper:global(.ril__outer .ril__toolbarItem) {
+  color: rgb(193, 201, 206);
 }
