--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -116,7 +116,9 @@
 .disabled,
 .disabled:hover {
   border-color: var(--button--color-disabled);
+  user-select: none;
   background-color: var(--button--color-disabled);
+  pointer-events: none;
   cursor: not-allowed;
 }
 
