--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -1,10 +1,12 @@
 .table {
   --border-color: var(--color-grey--lighter);
   --header-border-color: var(--color-blue);
-  --horizontal-inset: 0.5rem;
-
+  --horizontal-inset: var(--space-base);
   width: 100%;
+
+  border: solid 1px var(--border-color);
   border-collapse: collapse;
+  border-radius: var(--space-smallest);
 }
 
 .row:not(:last-child) {
