remove quoteCopy and add system colour to userUnassigned

--- a/packages/components/src/Icon/Icon.css
+++ b/packages/components/src/Icon/Icon.css
@@ -40,6 +40,7 @@
   fill: var(--color-request);
 }
 
+.userUnassigned,
 .reminder,
 .trash {
   fill: var(--color-red);
@@ -53,8 +54,7 @@
   fill: var(--color-lightBlue);
 }
 
-.quote,
-.quoteCopy {
+.quote {
   fill: var(--color-quote);
 }
 
