Add border radisu to table

--- a/packages/components/src/Table/Cells/Cell.css
+++ b/packages/components/src/Table/Cells/Cell.css
@@ -1,6 +1,5 @@
 .cell {
-  padding: var(--horizontal-inset) calc(var(--horizontal-inset) / 2)
-    var(--horizontal-inset) calc(var(--horizontal-inset) / 2);
+  padding: var(--horizontal-inset) calc(var(--horizontal-inset) / 2);
   text-align: left;
 }
 
