--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -4,7 +4,7 @@
   --horizontal-inset: var(--space-base);
   width: 100%;
 
-  box-shadow: 0 0 0 1px var(--border-color);
+  box-shadow: 0 0 0 var(--border-base) var(--border-color);
   border-collapse: collapse;
   border-radius: var(--radius-base);
 }
