feat(components): Adjust table styling (#265)
* Adjust padding on cells

* update playground headers

* Add border radisu to table

* Replace px value with border variable

Co-authored-by: Sean Healy <s@xib.ca>

Co-authored-by: eddysims <eddy.s@getjobber.com>
Co-authored-by: Sean Healy <s@xib.ca>

--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -1,10 +1,12 @@
 .table {
   --border-color: var(--color-grey--lighter);
   --header-border-color: var(--color-blue);
-  --horizontal-inset: 0.5rem;
-
+  --horizontal-inset: var(--space-base);
   width: 100%;
+
+  box-shadow: 0 0 0 var(--border-base) var(--border-color);
   border-collapse: collapse;
+  border-radius: var(--radius-base);
 }
 
 .row:not(:last-child) {
