Add min-width and height to stop the ovaltar

--- a/packages/components/src/Avatar/Avatar.css
+++ b/packages/components/src/Avatar/Avatar.css
@@ -9,6 +9,8 @@
   justify-content: center;
   width: var(--avatar-size);
   height: var(--avatar-size);
+  min-width: var(--avatar-size);
+  min-height: var(--avatar-size);
   border-radius: 50%;
   color: var(--color-blue--dark);
   font-size: var(--avatar-size);
