Change system colour for sendInvoice and paidInvoice icons

--- a/packages/design/src/icons/Icon.css
+++ b/packages/design/src/icons/Icon.css
@@ -59,17 +59,14 @@
 }
 
 .invoice,
-.invoiceLater {
+.invoiceLater,
+.sendInvoice,
+.paidInvoice {
   fill: var(--color-invoice);
 }
 
 .badInvoice {
   fill: var(--color-red);
-}
-
-.sendInvoice,
-.paidInvoice {
-  fill: var(--color-green);
 }
 
 .payment,
