--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -154,7 +154,7 @@ select.formField {
 
 .miniLabel:not(.small) .formField {
   --field--padding-top: calc(var(--space-base) + var(--space-smaller));
-  --field--padding-bottom: var(--space-smaller);
+  --field--padding-bottom: var(--space-small);
 }
 
 .miniLabel .label {
