feat(components): InputText Automatic Resize (#303)
* working prototype, need to adjust condions and fudge factor

* cleanup

* introduce interface to enforce types

* created tests and small refactor of calculateRows component

* addressing feedback on PR

* completely changed implementation to directly manipulate the textarea size instead of passing through rows prop

* Remove old tests

* Add return type

* Addressing comments

* Get line height off of the computed style

* Add padding and border to text area height calculations

* Fix text area sizing issue

Co-authored-by: Clinton Pahl <crpahl@gmail.com>

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -72,7 +72,6 @@
 
 textarea.formField {
   height: auto;
-  min-height: calc(var(--field--height) * 2);
   resize: vertical;
 }
 
@@ -155,7 +154,7 @@ select.formField {
 
 .miniLabel:not(.small) .formField {
   --field--padding-top: calc(var(--space-base) + var(--space-smaller));
-  --field--padding-bottom: var(--space-smaller);
+  --field--padding-bottom: var(--space-small);
 }
 
 .miniLabel .label {
