add comment as to why hardcoded 300px

--- a/packages/components/src/Autocomplete/Autocomplete.css
+++ b/packages/components/src/Autocomplete/Autocomplete.css
@@ -17,6 +17,8 @@
   background-color: var(--color-white);
 }
 
+/*Unfortunately this is how we define our line item picker height in jobber online.
+This is a concession to maintain visual parity.*/
 .options.medium {
   max-height: 300px;
 }
