add padding to bottom of heading & adjust text sizes

--- a/packages/components/src/Autocomplete/Autocomplete.css
+++ b/packages/components/src/Autocomplete/Autocomplete.css
@@ -24,6 +24,7 @@ This is a concession to maintain visual parity.*/
 }
 
 .options h5 {
+  padding-bottom: var(--space-smaller);
   border-bottom: var(--border-base) solid var(--color-blue--dark);
 }
 
