Makes the toast all come together as one toast

--- a/packages/components/src/Toast/Toast.css
+++ b/packages/components/src/Toast/Toast.css
@@ -11,6 +11,8 @@
   bottom: var(--space-large);
   left: 50%;
   z-index: 10000;
+  font-family: var(--typography--fontFamily-normal);
+  font-size: var(--typography--fontSize-large);
   transform: translateX(-50%);
 }
 
