--- a/packages/components/src/Typography/css/FontWeights.css
+++ b/packages/components/src/Typography/css/FontWeights.css
@@ -3,6 +3,11 @@
   font-weight: 400;
 }
 
+.semiBold {
+  font-family: var(--typography--fontFamily-normal);
+  font-weight: 500;
+}
+
 .bold {
   font-family: var(--typography--fontFamily-normal);
   font-weight: 700;
