--- a/packages/components/src/FileCard/FileCard.css
+++ b/packages/components/src/FileCard/FileCard.css
@@ -10,7 +10,6 @@
 
 .fileCard {
   display: flex;
-  width: 245px;
   height: var(--file-card--height);
   border: var(--border-base) solid var(--file-card--border-color);
   border-radius: var(--radius-base);
@@ -18,6 +17,36 @@
   background-color: var(--file-card--background-color);
   align-items: center;
   outline-color: var(--color-outline);
+}
+
+.imageBlock {
+  display: flex;
+  position: relative;
+  width: var(--file-card--height);
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  background-color: var(--file-card--header-background-color);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+.icon {
+  margin: 0 auto;
+}
+.progress {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: var(--file-card--base-padding);
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .contentBlock {
@@ -28,34 +57,11 @@
   margin: 0;
 }
 .fileName {
-  width: 145px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.imageBlock {
-  display: flex;
-  height: 100%;
-  min-width: var(--file-card--height);
-  box-sizing: border-box;
-  padding: 0;
-  background-color: var(--file-card--header-background-color);
-  align-items: center;
-  object-fit: cover;
-}
-.imageBlock.downloading {
-  padding: var(--file-card--base-padding);
-}
-.imageBlock img {
-  width: var(--file-card--height);
-  height: var(--file-card--height);
-}
-.icon {
-  margin: 0 auto;
-}
-
 .actionButton {
-  margin: 0;
-  padding: 0;
+  padding: var(--file-card--base-padding);
 }
