--- a/packages/components/src/FileCard/FileCard.css
+++ b/packages/components/src/FileCard/FileCard.css
@@ -51,17 +51,15 @@
 
 .contentBlock {
   flex-grow: 1;
-  padding: 0 0 0 var(--file-card--base-padding);
-}
-.contentBlock p {
-  margin: 0;
-}
-.fileName {
+  padding: 0 var(--file-card--base-padding);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.contentBlock p {
+  margin: 0;
+}
 
 .actionButton {
-  padding: var(--file-card--base-padding);
+  padding: 0 var(--file-card--base-padding) 0 0;
 }
