Isolate css to only case of icon.

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -141,8 +141,8 @@
 
 /* Icon */
 
-.hasIcon {
-  width: calc(var(--base-unit)*2.25);
+.onlyIcon {
+  width: calc(var(--base-unit) * 2.25);
   padding: 0;
 }
 
