fix(components): update button padding on icon button (#274)
* update button padding on icon button

* Change padding and width to actually create square icon button

* let icon-label buttons be the width they need to be

* base width off of base unit

* Isolate css to only case of icon.

Co-authored-by: Jeff Marvin <jeff.m@getjobber.com>

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -140,7 +140,14 @@
 }
 
 /* Icon */
+
+.onlyIcon {
+  width: calc(var(--base-unit) * 2.25);
+  padding: 0;
+}
+
 .hasIconAndLabel {
+  width: auto;
   padding: 0 var(--space-base);
 }
 
