--- a/packages/components/src/Autocomplete/Autocomplete.css
+++ b/packages/components/src/Autocomplete/Autocomplete.css
@@ -8,14 +8,22 @@
   position: absolute;
   z-index: var(--elevation-menu);
   width: 100%;
+  /* Unfortunately this is how we define our line item picker height in jobber online.
+  This is a concession to maintain visual parity. */
+  max-height: 300px;
   box-shadow: var(--shadow-base);
   box-sizing: border-box;
   margin: 0;
-  padding: var(--space-small);
+  padding: 0;
   border: var(--border-base) solid var(--color-grey--lighter);
   border-radius: var(--radius-base);
   overflow: auto;
   background-color: var(--color-white);
+}
+
+.options h5 {
+  padding: var(--space-small) 0 var(--space-smaller) var(--space-small);
+  border-bottom: var(--border-base) solid var(--color-blue--dark);
 }
 
 .options.visible {
@@ -51,9 +59,17 @@
   outline-color: var(--color-outline);
 }
 
+.option.separator:not(:last-child) {
+  border-bottom: var(--border-base) solid var(--color-grey--lighter);
+}
+
 .options:hover .option.active:not(:hover) {
   background-color: transparent;
   outline-color: transparent;
+}
+
+.autocomplete .heading:not(:first-child) {
+  padding-top: var(--space-small);
 }
 
 .option .icon {
@@ -63,6 +79,17 @@
 }
 
 .option .text {
-  flex: 1 1 auto;
-  align-self: auto;
+  display: inline-flex;
+  flex: 1 100%;
+  flex-wrap: wrap;
+}
+
+.option .label {
+  flex: 2;
+}
+
+.option .details {
+  flex: 1;
+  align-self: flex-end;
+  text-align: right;
 }
