PR changes to divider

--- a/packages/components/src/Divider/Divider.css
+++ b/packages/components/src/Divider/Divider.css
@@ -1,6 +1,6 @@
 .divider {
   height: var(--space-minuscule);
-  margin-bottom: var(--space-large);
+  margin: 0;
   border: none;
   border-bottom: var(--border-base) solid var(--color-grey--lighter);
 }
