Styles the validation message

--- a/packages/components/src/InputValidation/InputValidation.css
+++ b/packages/components/src/InputValidation/InputValidation.css
@@ -1,3 +1,8 @@
 .hasValidationMessage {
-  margin-bottom: var(--space-smaller);
+  margin-top: var(--space-smaller);
+}
+
+.message {
+  display: flex;
+  align-items: center;
 }
