--- a/packages/components/src/Autocomplete/Autocomplete.css
+++ b/packages/components/src/Autocomplete/Autocomplete.css
@@ -18,6 +18,7 @@
   border: var(--border-base) solid var(--color-grey--lighter);
   border-radius: var(--radius-base);
   overflow: auto;
+  scroll-behavior: smooth;
   background-color: var(--color-white);
 }
 
