Styling changes for Validation mesages

--- a/packages/components/src/InputValidation/InputValidation.css
+++ b/packages/components/src/InputValidation/InputValidation.css
@@ -5,4 +5,10 @@
 .message {
   display: flex;
   align-items: center;
+  padding: var(--space-smaller);
+  padding-left: 0;
+}
+
+.message > svg {
+  margin-right: var(--space-smaller);
 }
