--- a/packages/components/src/InputValidation/InputValidation.css
+++ b/packages/components/src/InputValidation/InputValidation.css
@@ -1,3 +1,14 @@
 .hasValidationMessage {
-  margin-bottom: var(--space-smaller);
+  margin-top: var(--space-smaller);
+}
+
+.message {
+  display: flex;
+  align-items: center;
+  padding: var(--space-smaller);
+  padding-left: 0;
+}
+
+.message > svg {
+  margin-right: var(--space-smaller);
 }
