--- a/packages/components/src/Checkbox/Checkbox.css
+++ b/packages/components/src/Checkbox/Checkbox.css
@@ -25,7 +25,7 @@
   width: var(--space-base);
   height: var(--space-base);
   box-sizing: border-box;
-  border: var(--border-thick) solid var(--color-grey--light);
+  border: var(--border-thick) solid var(--color-green);
   border-radius: var(--radius-base);
   background-color: var(--color-white);
   cursor: pointer;
@@ -35,6 +35,7 @@
 }
 
 .disabled .checkBox {
+  border-color: var(--color-grey--light);
   background-color: var(--color-grey--lightest);
   cursor: not-allowed;
 }
