Sync up FormatFile and InputAvatar overlays

--- a/packages/components/src/FormatFile/FormatFile.css
+++ b/packages/components/src/FormatFile/FormatFile.css
@@ -34,6 +34,19 @@
   object-fit: cover;
   flex-shrink: 0;
 }
+.imageBlock::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-blue--dark);
+  opacity: 0.3;
+  mix-blend-mode: multiply;
+}
+
 .icon {
   margin: 0 auto;
 }
@@ -46,7 +59,6 @@
   left: 0;
   padding: var(--file-card--base-padding);
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .contentBlock {
