Input Avatar working

--- a/packages/components/src/InputAvatar/InputAvatar.css
+++ b/packages/components/src/InputAvatar/InputAvatar.css
@@ -3,9 +3,12 @@
   align-items: center;
 }
 
+.inputAvatar > *:not(:last-child) {
+  margin-right: var(--space-small);
+}
+
 .preview {
   position: relative;
-  margin-right: var(--space-base);
 }
 
 .centered {
