change small icon to be base-size (16px)

--- a/packages/design/src/icons/Sizes.css
+++ b/packages/design/src/icons/Sizes.css
@@ -1,6 +1,6 @@
 .small {
-  width: calc(var(--base-unit) * 0.875);
-  height: calc(var(--base-unit) * 0.875);
+  width: var(--base-unit);
+  height: var(--base-unit);
 }
 
 .base {
